--- a/css/stylePage.css
+++ b/css/stylePage.css
@@ -769,6 +769,42 @@ footer  h5
 {
     padding: 40px 0;
 }
+
+.porducer-me .tooles-button
+{
+    background-color: #232f3e;
+    padding: 10px 0;
+}
+
+.porducer-me .tooles-button .buy
+,.porducer-me .tooles-button .clear
+{
+    border: 0;
+    outline: none;
+    color: #FFF;
+    padding: 10px;
+    margin-right: 1%;
+    font-size: 14px;
+    -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+    width: 11%;
+}
+
+.porducer-me .tooles-button .buy
+{
+    background-color: #386641;
+}
+.porducer-me .tooles-button .clear
+{
+    background-color: #E63946;
+}
+.porducer-me .tooles-button .buy:hover
+,.porducer-me .tooles-button .clear:hover
+{
+    background-color: #008bff;
+}
+
 .porducer-me .box 
 {
    margin-top: 30px;
@@ -779,6 +815,7 @@ footer  h5
 .porducer-me  .box .img-me
 {
    position: relative;
+   overflow: hidden;
 }
 
 .porducer-me  .box .img-me .overlay
@@ -796,15 +833,59 @@ footer  h5
     width: 100%;
     height: 100%;
 }
-.porducer-me  .img-me .fa-heart
+.porducer-me  .img-me .heart
 {
     position: absolute;
     top: 15px;
     right: 15px;
+    border:0;
     background-color:#FFF;
     padding: 10px;
     border-radius: 50%;
+    outline: none;
     font-size: 20px;
+    transition: all .2s ease-in-out;
+}
+
+.porducer-me  .img-me .heart:hover
+{
+    background-color: #E63946;
+    color:#FFF
+}
+
+.porducer-me  .box .img-me .toole-me
+{
+    position: absolute;
+    bottom: -80px;
+    width: 100%;
+    padding: 5px 0;
+    transition: all .2s ease-in-out;
+    background-color: rgba(0,0,0,0.5);
+}
+
+.porducer-me  .box .img-me:hover .toole-me
+{
+    bottom: 30px;
+}
+
+.porducer-me  .box .img-me .toole-me .trash 
+,.porducer-me  .box .img-me .toole-me .skating 
+{
+    background-color:#FFF;
+    padding: 10px;
+    border: 0;
+    margin-left: 3%;
+    border-radius: 50%;
+    outline: none;
+    font-size: 20px;
+    transition: all .2s ease-in-out;
+}
+
+.porducer-me  .box .img-me .toole-me .trash:hover 
+,.porducer-me  .box .img-me .toole-me .skating:hover
+{
+    background-color: #E63946;
+    color: #FFF;
 }
 
 .porducer-me  .show-button span
