create bar toole-me icon

--- a/css/stylePage.css
+++ b/css/stylePage.css
@@ -739,6 +739,7 @@ footer h5 {
 
 .porducer-me .box .img-me {
     position: relative;
+    overflow: hidden;
 }
 
 .porducer-me .box .img-me .overlay {
@@ -762,6 +763,8 @@ footer h5 {
     padding: 10px;
     border-radius: 50%;
     font-size: 20px;
+    outline: 0;
+    color: #FFF;
 }
 
 .porducer-me .show-button span {
@@ -1042,6 +1045,33 @@ footer h5 {
 
 
 /*----------------------------------Start this is page Subscription ---------------------------------------------------------------------*/
+
+.toole-me
+{
+    position: absolute;
+    width: 100%;
+    bottom: -80px;
+    background-color: rgba(0,0,0,0.6);
+    padding: 10px 0;
+    transition: all .2s ease-in-out;
+}
+
+.toole-me .trash
+,.toole-me .skating
+{
+    background-color: #f8f9fa;
+    color: #232f3e;
+    border: none;
+    font-size: 22px;
+    padding: 10px;
+    border-radius: 50%;
+    margin-left: 3%;
+}
+
+.box .img-me:hover .toole-me
+{
+    bottom: 10px;
+}
 
 
 /*Start section-subscrip*/
