--- a/css/stylePage.css
+++ b/css/stylePage.css
@@ -1053,7 +1053,6 @@ footer h5 {
     bottom: -80px;
     background-color: rgba(0,0,0,0.6);
     padding: 10px 0;
-    transition: all .2s ease-in-out;
 }
 
 .toole-me .trash
@@ -1070,7 +1069,7 @@ footer h5 {
 
 .box .img-me:hover .toole-me
 {
-    bottom: 10px;
+    bottom: 0;
 }
 
 
