--- a/css/stylePage.css
+++ b/css/stylePage.css
@@ -814,7 +814,7 @@ footer h5 {
         height: 500px
     }
     .porducer-me .show-button button {
-        margin-right: 46%;
+        margin-right: 27%;
         width: 40%
     }
 }
@@ -1346,13 +1346,52 @@ footer h5 {
 }
 
 .basketQuantityModal {
-    text-align: center;
+    
+    max-width: 450px !important;
+    min-height: 553px;
+    padding: 20px 14px;
+    text-align: right;
+    border-radius: 10px !important;
 }
 
-.basketQuantityModal p {
-    padding: 10px;
+.basketQuantityModal .header
+{
+    color: #008bff;
+    padding-bottom: 9px;
+    border-bottom: 1px solid #adb5bd;
+}
+
+.basketQuantityModal p
+{
+    margin: 0;
+    padding: 9px 0;
+    color: #495057;
+}
+
+.basketQuantityModal p:last-of-type
+{
+    border-bottom: 1px solid #adb5bd;
+}
+
+.basketQuantityModal h6
+{
+    margin: 6px 0;
+    font-weight: bold;
+}
+
+.basketQuantityModal input ,select
+{
+    width: 100%;
+    margin: 6px 0;
+    padding: 7px;
+    border: 1px solid #ddd;
+    outline: 0;
 }
 
 .basketQuantityModal button {
-    padding: 2px 10px 2px 10px;
+    width: 100%;
+    margin-top: 10px;
+    background-color: #232f3e;
+    outline: 0;
+    border: none;
 }
