--- a/css/stylePage.css
+++ b/css/stylePage.css
@@ -153,7 +153,7 @@ header .box2 {
 
 header .box1 a,
 header .box2 a {
-    color: #FFF;
+    color: #131313;
     font-size: 20px;
     margin-left: 2px;
 }
@@ -1372,22 +1372,3 @@ footer h5 {
 }
 
 /****************************[basketQuantityModal]***************************************************/
-/**********[bar]***********/
-.bar {
-    padding: 5px 0;
-    background-color: #E8EBEE;
-    width: 100%;
-    text-align: right
-}
-
-.btn1 {
-    background-color:#386641;
-    padding: 2px 13px 2px 29px;
-    color: #FFF;
-    transition: all .2s ease-in-out;
-}
-
-.btn1:hover
-{
-    color: #a9a9a9;
-}
